[gd_scene load_steps=3 format=3 uid="uid://hexto4ujp354"]

[ext_resource type="Script" path="res://menu scenes/mainMenu.gd" id="1_ilmrc"]
[ext_resource type="Texture2D" uid="uid://chw2xe3g46lf0" path="res://paralaxbackground/0.png" id="8_4fu15"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ilmrc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_4fu15")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="start" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="settings" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="quit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
